fixing overflow

--- a/css/reset.css
+++ b/css/reset.css
@@ -15,15 +15,13 @@ body {
     color: rgba(51, 51, 51, 1);
     -webkit-font-smoothing: antialiased;
     height: 100%;
+    overflow: hidden;
     line-height: 1.5;
 }
 
 body, textarea {
     font-family: 'Roboto', serif;
     font-size: 14px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 a {
@@ -46,10 +44,19 @@ a:hover {
     color: rgba(25, 118, 210, 1);
 }
 
+.application{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+}
+
 .doodle{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: auto;
 }
 
 
@@ -85,6 +92,7 @@ a:hover {
 }
 
 .thumbnails{
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
